Fixed URL validation issues that could lead to invalid BOMs