@@ -77,8 +77,8 @@ import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.InputStreamReader;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -575,13 +575,13 @@ public abstract class BaseCycloneDxMojo extends AbstractMojo implements Contextu
     }
 
     private void addExternalReference(final ExternalReference.Type referenceType, final String url, final Component component) {
-        final ExternalReference ref = new ExternalReference();
-        ref.setType(referenceType);
-        ref.setUrl(url);
         try {
-            new URL(ref.getUrl());
+            final URI uri = new URI(url.trim());
+            final ExternalReference ref = new ExternalReference();
+            ref.setType(referenceType);
+            ref.setUrl(uri.toString());
             component.addExternalReference(ref);
-        } catch (MalformedURLException e) {
+        } catch (URISyntaxException e) {
             // throw it away
         }
     }
@@ -630,9 +630,9 @@ public abstract class BaseCycloneDxMojo extends AbstractMojo implements Contextu
                 license.setName(artifactLicense.getName().trim());
                 if (StringUtils.isNotBlank(artifactLicense.getUrl())) {
                     try {
-                        new URL(artifactLicense.getUrl());
-                        license.setUrl(artifactLicense.getUrl().trim());
-                    } catch (MalformedURLException e) {
+                        final URI uri = new URI(artifactLicense.getUrl().trim());
+                        license.setUrl(uri.toString());
+                    } catch (URISyntaxException  e) {
                         // throw it away
                     }
                 }
